--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "plotly.js-dist-min": "^3.0.1",
     "vue": "^3.2.37"
   },
   "devDependencies": {
